# darcy-hackathon

./: .env.example  .gitignore  .mcp.json  HANDOFF.md  PROGRESS.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/data/: decision_tree.py  jurisdictions.py  requirements.py
backend/src/data/internal_knowledge/: email_aml_rejection_resolution.txt  email_capital_proof_delay.txt  finma_partner_contacts.txt  process_template_application_timeline.txt  process_template_board_cv_checklist.txt
backend/src/data/regulatory_docs/: amla_switzerland.txt  amlo_finma.txt  banking_act_requirements.txt  banking_ordinance_full.txt  cap_adequacy_ordinance.txt  depositor_protection_esisuisse.txt  finia_securities.txt  finma_banking_license.txt  finma_circular_2008_21_operational_risks.txt  finma_circular_2016_7_aml.txt  finma_circular_2017_1_corporate_governance.txt  finma_circular_2018_3_outsourcing.txt  finma_fintech_license.txt  finma_fund_management.txt  fintech_sandbox_art1b.txt  liquidity_ordinance.txt  (+8 more)
backend/src/middleware/: auth.py  cors.py
backend/src/models/: chat.py  chat_session.py  checklist.py  classification.py  client.py  ehp.py  jurisdiction.py  pagination.py
backend/src/routes/: chat.py  classify.py  client_documents.py  clients.py  consult.py  ehp.py  health.py  jurisdictions.py  kb.py  onboard.py  requirements.py
backend/src/services/: agent_tool_loop.py  chat_store.py  checklist_templates.py  classification.py  claude_agent.py  claude_service.py  client_store.py  consultant_agent.py  db.py  demo_seeder.py  document_ingestion.py  document_store.py  document_verifier.py  ehp_generator.py  ehp_store.py  gap_analyzer.py  rag_service.py
backend/tests/: conftest.py  test_agents.py  test_api_e2e.sh  test_chat_sessions.py  test_clients.py  test_di.py  test_documents.py  test_ehp.py  test_gap_analyzer.py  test_health.py  test_rag_search.py
(+152 files in other folders)
